Code cleanups base on Sonar violation drilldown and hotspots. Also organised imports and replaced different used JSON libs with Jettison.
There are several changes in unit tests because of switching to throw IllegalArgumentException instead of NullPointerExceptions in cases where NULL is parsed for parameters that do not allow null values. Such changes are also reflected in the Java doc of the affected Interfaces.

Excluded form this cleanups are:
 - "Cyclomatic Complexity" because it is not good to mix cleanups with refactoring and because dealing with this would require a lot more time.
 - Test coverage
 - Documentation
 

git-svn-id: https://svn.apache.org/repos/asf/incubator/stanbol/trunk/entityhub@1082257 13f79535-47bb-0310-9956-ffa450edef68